📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12846,5 +12846,37 @@
         "published": "Sun, 14 Dec 2025 13:13:41 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46262777\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/14/making-sense-of-the-risky-netflix-warner-bros-deal/",
+        "title": "Making sense of the risky Netflix-Warner Bros. deal",
+        "link": "https://techcrunch.com/2025/12/14/making-sense-of-the-risky-netflix-warner-bros-deal/",
+        "published": "Sun, 14 Dec 2025 17:27:05 +0000",
+        "source": "TechCrunch",
+        "summary": "Netflix's $82.6 billion acquisition of Warner Bros. encapsulates a fraught moment for Hollywood, as the entertainment business is increasingly overshadowed by tech giants."
+    },
+    {
+        "id": "https://gizmodo.com/the-two-it-movies-may-finally-get-their-extended-cut-2000699293",
+        "title": "The Two \u2018It\u2019 Movies May Finally Get Their Extended Cut",
+        "link": "https://gizmodo.com/the-two-it-movies-may-finally-get-their-extended-cut-2000699293",
+        "published": "Sun, 14 Dec 2025 17:25:43 +0000",
+        "source": "Gizmodo",
+        "summary": "Andy Muschietti let longtime fans know he's still got a supercut of the 'It' duology on his mind that he wants to make happen."
+    },
+    {
+        "id": "https://borretti.me/article/hashcards-plain-text-spaced-repetition",
+        "title": "Hashcards: A Plain-Text Spaced Repetition System",
+        "link": "https://borretti.me/article/hashcards-plain-text-spaced-repetition",
+        "published": "Sun, 14 Dec 2025 16:55:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46264492\">Comments</a>"
+    },
+    {
+        "id": "https://www.typeframe.net/",
+        "title": "The Typeframe PX-88 Portable Computing System",
+        "link": "https://www.typeframe.net/",
+        "published": "Sun, 14 Dec 2025 17:43:39 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46265015\">Comments</a>"
     }
 ]
