📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12902,5 +12902,37 @@
         "published": "Sun, 14 Dec 2025 17:13:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46264704\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/ai/kindles-in-book-ai-assistant-can-answer-all-your-questions-without-spoilers-190609961.html?src=rss",
+        "title": "Kindle's in-book AI assistant can answer all your questions without spoilers",
+        "link": "https://www.engadget.com/ai/kindles-in-book-ai-assistant-can-answer-all-your-questions-without-spoilers-190609961.html?src=rss",
+        "published": "Sun, 14 Dec 2025 19:06:09 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you're several chapters into a novel and forgot who a character was, Amazon is hoping its new Kindle feature will jog your memory without ever having to put the e-reader down. This feature, called <a class=\"no-affiliate-link\" href=\"https://www.aboutamazon.com/news/books-and-authors/kindle-recaps-feature-ebook-series-refreshers\">Ask this Book</a>, was announced during Amazon's <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/home/everything-announced-at-amazons-fall-hardware-even"
+    },
+    {
+        "id": "https://gizmodo.com/fate-of-the-republic-will-probably-be-out-before-decades-end-2000699519",
+        "title": "\u2018Fate of the Republic\u2019 Will (Probably?) Be Out Before Decade\u2019s End",
+        "link": "https://gizmodo.com/fate-of-the-republic-will-probably-be-out-before-decades-end-2000699519",
+        "published": "Sun, 14 Dec 2025 19:50:42 +0000",
+        "source": "Gizmodo",
+        "summary": "If Arcanauts has its way, it won't be too long of a wait for 'Fate of the Old Republic'...but you're gonna do some waiting regardless."
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46264491",
+        "title": "Ask HN: What Are You Working On? (December 2025)",
+        "link": "https://news.ycombinator.com/item?id=46264491",
+        "published": "Sun, 14 Dec 2025 16:55:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46264491\">Comments</a>"
+    },
+    {
+        "id": "https://alinpanaitiu.com/blog/developing-hardwax-oil/",
+        "title": "Developing a food-safe finish for my wooden spoons",
+        "link": "https://alinpanaitiu.com/blog/developing-hardwax-oil/",
+        "published": "Wed, 10 Dec 2025 21:44:30 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46224303\">Comments</a>"
     }
 ]
