📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12934,5 +12934,29 @@
         "published": "Wed, 10 Dec 2025 21:44:30 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46224303\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/ai/grok-is-spreading-inaccurate-info-again-this-time-about-the-bondi-beach-shooting-203946515.html?src=rss",
+        "title": "Grok is spreading inaccurate info again, this time about the Bondi Beach shooting",
+        "link": "https://www.engadget.com/ai/grok-is-spreading-inaccurate-info-again-this-time-about-the-bondi-beach-shooting-203946515.html?src=rss",
+        "published": "Sun, 14 Dec 2025 20:39:47 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>In the same month that Grok opted for a <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/ai/grok-would-prefer-a-second-holocaust-over-harming-elon-musk-200023093.html\">second Holocaust</a> over vaporizing Elon Musk's brain, the AI chatbot is on the fritz again. Following the Bondi Beach shooting in Australia during a festival to mark the start of Hanukkah, Grok is responding to user requests with inaccurate or completely unrelated info, as first spotted by <a class=\"no-affiliate-li"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-roku-shortcuts/",
+        "title": "20+ useful Roku shortcuts and menus that every user should know about (and how to access them)",
+        "link": "https://www.zdnet.com/article/best-roku-shortcuts/",
+        "published": "Sun, 14 Dec 2025 21:05:00 GMT",
+        "source": "Latest news",
+        "summary": "You're not using your Roku system to its full potential. These secret menus, settings, and hacks will unlock that for you."
+    },
+    {
+        "id": "https://www.edutopia.org/article/do-dyslexia-fonts-actually-work/",
+        "title": "Do Dyslexia Fonts Actually Work? (2022)",
+        "link": "https://www.edutopia.org/article/do-dyslexia-fonts-actually-work/",
+        "published": "Sun, 14 Dec 2025 19:41:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46266094\">Comments</a>"
     }
 ]
