📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13006,5 +13006,13 @@
         "published": "Sun, 14 Dec 2025 19:42:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46266102\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/ai/google-pulls-ai-generated-videos-of-disney-characters-from-youtube-in-response-to-cease-and-desist-220849629.html?src=rss",
+        "title": "Google pulls AI-generated videos of Disney characters from YouTube in response to cease and desist",
+        "link": "https://www.engadget.com/ai/google-pulls-ai-generated-videos-of-disney-characters-from-youtube-in-response-to-cease-and-desist-220849629.html?src=rss",
+        "published": "Sun, 14 Dec 2025 22:08:49 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Google seems to be cracking down on the use of Disney characters in AI-generated videos on YouTube after it was <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/ai/disney-has-accused-google-of-copyright-infringement-on-a-massive-scale-163737642.html\">hit with a cease and desist</a> letter. According to reports by <a class=\"no-affiliate-link\" href=\"https://variety.com/2025/film/news/google-removes-ai-videos-disney-characters-cease-desist-1236608015/\"><em><ins>Variety</ins></em></a> "
     }
 ]
