📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13014,5 +13014,45 @@
         "published": "Sun, 14 Dec 2025 22:08:49 +0000",
         "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
         "summary": "<p>Google seems to be cracking down on the use of Disney characters in AI-generated videos on YouTube after it was <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/ai/disney-has-accused-google-of-copyright-infringement-on-a-massive-scale-163737642.html\">hit with a cease and desist</a> letter. According to reports by <a class=\"no-affiliate-link\" href=\"https://variety.com/2025/film/news/google-removes-ai-videos-disney-characters-cease-desist-1236608015/\"><em><ins>Variety</ins></em></a> "
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/14/grok-gets-the-facts-wrong-about-bondi-beach-shooting/",
+        "title": "Grok got crucial facts wrong about Bondi Beach shooting",
+        "link": "https://techcrunch.com/2025/12/14/grok-gets-the-facts-wrong-about-bondi-beach-shooting/",
+        "published": "Sun, 14 Dec 2025 23:17:47 +0000",
+        "source": "TechCrunch",
+        "summary": "Grok, the chatbot built by Elon Musk\u2019s xAI and popularized on his social media platform X, appears to have repeatedly spread misinformation about today\u2019s mass shooting at Bondi Beach in Australia."
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/844447/sudan-archives-the-bpm",
+        "title": "You need to listen to Sudan Archives&#8217; violin opus for the club",
+        "link": "https://www.theverge.com/entertainment/844447/sudan-archives-the-bpm",
+        "published": "2025-12-14T18:45:00-05:00",
+        "source": "The Verge",
+        "summary": "My introduction to Sudan Archives was the song \"Nont for Sale\" from her first EP Sink in 2018. I've been a die-hard fan ever since. With each album, she finds new ways to sculpt the sound of her violin, contorting it in defiance of expectations. Athena found her in conversation with it, leaving its timbre [&#8230;]"
+    },
+    {
+        "id": "https://mashable.com/article/dec-14-microsoft-office-home-business-for-mac-2021-lifetime-license",
+        "title": "Give your Mac Microsoft\u2019s best tools for under $10 each",
+        "link": "https://mashable.com/article/dec-14-microsoft-office-home-business-for-mac-2021-lifetime-license",
+        "published": "Sun, 14 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Give your Mac a boost with this Microsoft Office Home and Business for Mac 2021 lifetime license, on sale now for just $49.97 (reg. $219)."
+    },
+    {
+        "id": "https://mashable.com/article/dec-14-apple-macbook-pro-i5-2ghz-2020",
+        "title": "You can get a MacBook Pro for $400 if you act fast",
+        "link": "https://mashable.com/article/dec-14-apple-macbook-pro-i5-2ghz-2020",
+        "published": "Sun, 14 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Get one of Apple's most powerful laptops, the MacBook Pro, for only $399.97 (reg. $1,580)."
+    },
+    {
+        "id": "https://im-just-lee.ing/forth-why-cb234c03.txt",
+        "title": "An Attempt at a Compelling Articulation of Forth's Practical Strengths and Eter",
+        "link": "https://im-just-lee.ing/forth-why-cb234c03.txt",
+        "published": "Mon, 08 Dec 2025 00:25:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46186914\">Comments</a>"
     }
 ]
