📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13086,5 +13086,53 @@
         "published": "Mon, 15 Dec 2025 00:39:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46268869\">Comments</a>"
+    },
+    {
+        "id": "https://gizmodo.com/rob-reiner-director-of-misery-princess-bride-dead-at-78-2000699592",
+        "title": "Rob Reiner, Director of \u2018Misery,\u2019 \u2018Princess Bride,\u2019 Dead at 78",
+        "link": "https://gizmodo.com/rob-reiner-director-of-misery-princess-bride-dead-at-78-2000699592",
+        "published": "Mon, 15 Dec 2025 03:56:36 +0000",
+        "source": "Gizmodo",
+        "summary": "He also directed 'Stand By Me,' 'A Few Good Men,' 'When Harry Met Sally,' 'This Is Spinal Tap,' and many more."
+    },
+    {
+        "id": "https://mashable.com/article/it-welcome-to-derry-finale-ending-explained",
+        "title": "IT: Welcome to Derrys chaotic ending, explained",
+        "link": "https://mashable.com/article/it-welcome-to-derry-finale-ending-explained",
+        "published": "Mon, 15 Dec 2025 03:10:00 +0000",
+        "source": "Mashable",
+        "summary": "An explainer for the ending of \"IT: Welcome to Derry.\" What happened to Pennywise? What's with the final flash forward? What's next for Dick Hallorann and Major Hanlon?"
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-15-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 15, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-15-2025",
+        "published": "Mon, 15 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-15-2025",
+        "title": "NYT Strands hints, answers for December 15, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-15-2025",
+        "published": "Mon, 15 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-15-2025",
+        "title": "Wordle today: Answer, hints for December 15, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-15-2025",
+        "published": "Mon, 15 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1639 on December 15 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://en.jardineriaon.com/The-talipot-palm-trees-of-Rio-de-Janeiro-bloom-for-the-first-and-only-time.html",
+        "title": "Rio de Janeiro's talipot palm trees bloom for the first and only time",
+        "link": "https://en.jardineriaon.com/The-talipot-palm-trees-of-Rio-de-Janeiro-bloom-for-the-first-and-only-time.html",
+        "published": "Sun, 07 Dec 2025 03:42:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46178966\">Comments</a>"
     }
 ]
