📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13142,5 +13142,21 @@
         "published": "Mon, 15 Dec 2025 03:57:46 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46270298\">Comments</a>"
+    },
+    {
+        "id": "https://readsomethingwonderful.com/",
+        "title": "Read Something Wonderful",
+        "link": "https://readsomethingwonderful.com/",
+        "published": "Mon, 15 Dec 2025 04:15:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46270415\">Comments</a>"
+    },
+    {
+        "id": "https://thenewstack.io/adafruit-arduinos-rules-are-incompatible-with-open-source/",
+        "title": "Adafruit: Arduino\u2019s Rules Are \u2018Incompatible With Open Source\u2019",
+        "link": "https://thenewstack.io/adafruit-arduinos-rules-are-incompatible-with-open-source/",
+        "published": "Sun, 14 Dec 2025 18:18:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46265362\">Comments</a>"
     }
 ]
