📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13158,5 +13158,37 @@
         "published": "Sun, 14 Dec 2025 18:18:34 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46265362\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/844460/irobot-files-for-bankruptcy",
+        "title": "iRobot files for bankruptcy",
+        "link": "https://www.theverge.com/news/844460/irobot-files-for-bankruptcy",
+        "published": "2025-12-15T01:11:18-05:00",
+        "source": "The Verge",
+        "summary": "After 35 years, the maker of the Roomba robot vacuum filed for bankruptcy protection late Sunday night. Following issuing warnings earlier this year that it was fast running out of options, iRobot announced it will enter Chapter 11 protection and plans to be acquired by its contract manufacturer, the Chinese-based Picea Robotic. The company says [&#8230;]"
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-15-2025",
+        "title": "Hurdle hints and answers for December 15, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-15-2025",
+        "published": "Mon, 15 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-15",
+        "title": "Moon phase today: What the moon will look like on December 15",
+        "link": "https://mashable.com/article/moon-phase-today-dec-15",
+        "published": "Mon, 15 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 15, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://www.volatileint.dev/posts/auto-type-deduction-gauntlet/",
+        "title": "How well do you know C++ auto type deduction?",
+        "link": "https://www.volatileint.dev/posts/auto-type-deduction-gauntlet/",
+        "published": "Tue, 09 Dec 2025 22:44:19 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46211767\">Comments</a>"
     }
 ]
