📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13190,5 +13190,13 @@
         "published": "Tue, 09 Dec 2025 22:44:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46211767\">Comments</a>"
+    },
+    {
+        "id": "https://aval.bearblog.dev/nvidiaproteins/",
+        "title": "Why proteins fold and how GPUs help us fold",
+        "link": "https://aval.bearblog.dev/nvidiaproteins/",
+        "published": "Mon, 15 Dec 2025 06:05:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46270972\">Comments</a>"
     }
 ]
