📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13198,5 +13198,13 @@
         "published": "Mon, 15 Dec 2025 06:05:35 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46270972\">Comments</a>"
+    },
+    {
+        "id": "https://thehonestsorcerer.substack.com/p/running-on-empty-copper",
+        "title": "Running on Empty: Copper",
+        "link": "https://thehonestsorcerer.substack.com/p/running-on-empty-copper",
+        "published": "Mon, 08 Dec 2025 21:54:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46198177\">Comments</a>"
     }
 ]
