📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -13206,5 +13206,53 @@
         "published": "Mon, 08 Dec 2025 21:54:12 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46198177\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/844474/who-is-picea-robotics-company-owns-irobot",
+        "title": "Who is Picea Robotics, Roomba\u2019s new owner?",
+        "link": "https://www.theverge.com/news/844474/who-is-picea-robotics-company-owns-irobot",
+        "published": "2025-12-15T03:52:45-05:00",
+        "source": "The Verge",
+        "summary": "iRobot, the owner of the Roomba robot vacuum, has filed for Chapter 11 bankruptcy, stating that it will be acquired by its contract manufacturer, Picea Robotics. The Chinese-based company assumed iRobot's $190 million loan earlier this month and, under the terms of iRobot's restructuring, will waive that debt, along with the $161.5 million iRobot owes [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/home/irobot-has-filed-for-bankruptcy-and-may-be-taken-over-by-its-primary-supplier-091602257.html?src=rss",
+        "title": "iRobot has filed for bankruptcy and may be taken over by its primary supplier",
+        "link": "https://www.engadget.com/home/irobot-has-filed-for-bankruptcy-and-may-be-taken-over-by-its-primary-supplier-091602257.html?src=rss",
+        "published": "Mon, 15 Dec 2025 09:16:02 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>iRobot, which brought robotic vacuum cleaners to the masses with its iconic Roomba models, has <a href=\"https://media.irobot.com/2025-12-14-iRobot-Announces-Strategic-Transaction-to-Drive-Long-Term-Growth-Plan\">filed for Chapter 11 bankruptcy</a>. The Massachusetts-based company plans to sell all assets to its primary supplier, a Chinese company known as Picea Robotics. If approved by a bankruptcy court, the move would allow iRobot to &quot;continue&nbsp;operating in the ordinary course, purs"
+    },
+    {
+        "id": "https://mashable.com/article/roomba-irobot-bankrupt-robot-vacuum",
+        "title": "Roomba maker iRobot has filed for bankruptcy",
+        "link": "https://mashable.com/article/roomba-irobot-bankrupt-robot-vacuum",
+        "published": "Mon, 15 Dec 2025 08:26:59 +0000",
+        "source": "Mashable",
+        "summary": "The robot vacuum company had been struggling for a while."
+    },
+    {
+        "id": "https://drobinin.com/posts/the-whole-app-is-a-blob/",
+        "title": "The Whole App is a Blob",
+        "link": "https://drobinin.com/posts/the-whole-app-is-a-blob/",
+        "published": "Mon, 15 Dec 2025 04:09:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46270386\">Comments</a>"
+    },
+    {
+        "id": "http://viznut.fi/unscii/",
+        "title": "Unscii",
+        "link": "http://viznut.fi/unscii/",
+        "published": "Mon, 15 Dec 2025 03:55:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46270282\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/ceos-still-betting-on-ai-strategy-vs-return-on-investment-in-2026/",
+        "title": "CEOs still betting big on AI: Strategy vs. return on investment in 2026",
+        "link": "https://www.artificialintelligence-news.com/news/ceos-still-betting-on-ai-strategy-vs-return-on-investment-in-2026/",
+        "published": "Mon, 15 Dec 2025 09:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Enterprise leaders are pressing ahead with artificial intelligence, even as early results remain uneven. Reporting from the Wall Street Journal and Reuters shows that most CEOs expect AI spending to keep rising through 2026, despite difficulty tying those investments to clear, enterprise-wide returns. This tension highlights where many organisations now sit in their AI journey. [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/ceos-still-betting-on-ai-strateg"
     }
 ]
